<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/web_hi_res_512" />

            <TextView
                android:id="@+id/tvWelcomeTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInsttructions00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userdatatag"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/etNuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvuserNameTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userNametag" />

            <EditText
                android:id="@+id/etPswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tvPassTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pswdTag" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="137dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/rememberMe"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.75"
                        android:text="@string/rememberMe" />

                    <Button
                        android:id="@+id/btnForgotPass"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:background="@color/backgroundMaster"
                        android:text="@string/forgotPassword"
                        android:textColor="@android:color/white" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="25dp">

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="25dp">

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundMaster"
                android:text="@string/login"
                android:textColor="@color/neutro" />

            <Button
                android:id="@+id/btnMainRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundMaster"
                android:layout_marginTop="25dp"
                android:text="@string/newUser"
                android:textColor="@color/neutro" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>