<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageRegisterView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/web_hi_res_512" />

            <TextView
                android:id="@+id/tvRegisterWelcomeTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRegisterInsttructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newUserData"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/etRegisterNuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvRegisterUserNameTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userNametag" />

            <EditText
                android:id="@+id/etRegisterUserMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tvRegisterUserMailTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />


            <EditText
                android:id="@+id/etRegisterPswd"
                android:paddingTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tvRegisterPassTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pswdTag" />


            <Button
                android:id="@+id/btnRegisterSendData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundMaster"
                android:layout_marginTop="25dp"
                android:text="@string/registro"
                android:textColor="@color/neutro" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>